# ML-Internship-Home-Assignment

./: .gitignore  README.md  dashboard.py  pyproject.toml  requirements.txt  run.sh
dashboard/: dashboard_utils.py  eda.py  inference.py  training.py
data_ml_assignment/: constants.py
data_ml_assignment/api/: constants.py  inference_route.py  main.py  schemas.py  server.py
data_ml_assignment/feature_engineering/: feature_engineering_data.py
data_ml_assignment/models/: base_model.py  estimator_interface.py  naive_bayes_model.py  svc_model.py  xgbc_model.py
data_ml_assignment/processing/: processing_data.py
data_ml_assignment/training/: train_pipeline.py
data_ml_assignment/utils/: plot_utils.py
models/: new.joblib  new_model_1.joblib  tfidf_vectorizer.joblib  xgboost_model.joblib
samples/: BUSINESS_ANALYST.txt  BUSINESS_INTELLIGENCE.txt  DOT_NET_DEVELOPER.txt  HELP_DESK_AND_SUPPORT.txt  INFORMATICA_DEVELOPER.txt  JAVA_DEVELOPER.txt  NETWORK_AND_SYSTEM_ADMINISTRATOR.txt  ORACLE_DBA.txt  PROJECT_MANAGER.txt  QUALITY_ASSURANCE.txt  SAP.txt  SHAREPOINT_DEVELOPER.txt  SQL_DEVELOPER.txt  WEB_DEVELOPER.txt
