[tool.poetry]
name = "ml-internship-home-assignment"
version = "0.1.0"
description = "ML Internship Home Assignment"
authors = ["mohamedhajja <mohamedhajja22@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.2"
joblib = "1.3.2"
matplotlib = "3.8.0"
nltk = "3.8.1"
numpy = "^1.26.4"
pandas = "2.2.3"
pydantic = "2.4.2"
Requests = "2.31.0"
scikit_learn = "1.6.1"
seaborn = "0.13.0"
streamlit = "1.27.2"
uvicorn = "0.23.2"
wordcloud = "^1.9.4"
xgboost = "2.0.0"
imbalanced-learn = "^0.13.0"
sklearn-compat = "0.1.3"
contractions = "^0.1.73"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.0.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"